--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,5 +1,10 @@
 <div class="col-md-10 col-sm-10 offset-md-2 main_block">
     <h1 class="float-left">{{ header }} Employee</h1>
+    <div class="float-right breadcrumb_block">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a routerLink="/employee/list">Employee List</a></li>
+            </ol>
+        </div>
     <div class="clearfix"></div>
     <form role="form" #employeeForm="ngForm" (ngSubmit)="employeeForm.form.valid && InsertEmployee(employeeForm)">
         <div class="row">
@@ -105,7 +110,7 @@
                     <label><span>*</span>IsActive</label>
                     <br>
                     <div class="activeyes_box">
-                        <input type="checkbox" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive"
+                        <input type="checkbox" id="IsActive" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive"
                             checked value="1">
                         <label for="IsActive"></label>
                     </div>
