--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,14 +1,14 @@
 <div class="col-md-10 col-sm-10 offset-md-2 main_block">
     <h1 class="float-left">Employee</h1>
     <div class="float-right breadcrumb_block">
-        <button routerLink="/employee/add">Add Employee</button>
+        <button routerLink="/employee/add" class="theme_btn">Add Employee</button>
     </div>
     <div class="clearfix"></div>
     <table id="list_tables" class="table table-striped table-bordered table-hover dataTable no-footer"
         style="width:100%">
         <thead class="thead-dark">
             <tr>
-                <th class="text-center sr_no_width">EmployeeId</th>
+                <th class="text-center sr_no_width">Sr.No</th>
                 <th>EmployeeName</th>
                 <th>JoiningDate</th>
                 <th>BirthDate</th>
@@ -21,8 +21,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let employee of employeeList">
-                <td class="text-center">{{employee.EmployeeId}}</td>
+            <tr *ngFor="let employee of employeeList; let i = index">
+                <td class="text-center">{{i+1}}</td>
                 <td>{{employee.EmployeeName}} </td>
                 <td>{{employee.JoiningDate}} </td>
                 <td>{{employee.BirthDate}} </td>
@@ -31,9 +31,11 @@
                 <td>{{employee.Designation}} </td>
                 <td>{{employee.EmailId}} </td>
                 <td class="text-center">
-                    <div class="activeyes_box">
-                        <input type="checkbox" name="active1" id="active1" checked value="Yes" />
-                        <label for="active1"></label>
+                    <div class="activeyes_box" data-toggle="tooltip" data-placement="top"
+                        [attr.title]="employee.IsActive==1 ? 'Active' : 'Deactive'">
+                        <input type="checkbox" name="active1" id="active{{i}}" (change)="isActiveChange(employee,i)"
+                            [checked]="employee.IsActive==1" value="Yes">
+                        <label for="active{{i}}"></label>
                     </div>
                 </td>
                 <td class="text-center">
