--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,14 +1,14 @@
 <div class="col-md-10 col-sm-10 offset-md-2 main_block">
     <h1 class="float-left">Project</h1>
-    <div class="float-right breadcrumb_block">
-        <button routerLink="/project/add">Add Project</button>
+       <div class="float-right breadcrumb_block">
+        <button routerLink="/project/add" class="theme_btn">Add Project</button>
     </div>
     <div class="clearfix"></div>
     <table id="list_tables" class="table table-striped table-bordered table-hover dataTable no-footer"
         style="width:100%">
         <thead class="thead-dark">
             <tr>
-                <th class="text-center sr_no_width">ProjectId</th>
+                <th class="text-center sr_no_width">Sr.No</th>
                 <th>ProjectName</th>
                 <th>Description</th>
                 <th class="text-center active_width">Active?</th>
@@ -16,14 +16,17 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let project of projectList">
-                <td class="text-center">{{project.ProjectId}}</td>
+            <tr *ngFor="let project of projectList let i=index">
+                <td class="text-center">{{i+1}}</td>
                 <td>{{project.ProjectName}} </td>
                 <td>{{project.Description}} </td>
+
                 <td class="text-center">
-                    <div class="activeyes_box">
-                        <input type="checkbox" name="active1" id="active1" checked value="Yes">
-                        <label for="active1"></label>
+                    <div class="activeyes_box" data-toggle="tooltip" data-placement="top"
+                        [attr.title]="project.IsActive==1 ? 'Active' : 'Deactive'">
+                        <input type="checkbox" name="active1" id="active{{i}}" (change)="isActiveChange(project,i)"
+                            [checked]="project.IsActive==1" value="Yes">
+                        <label for="active{{i}}"></label>
                     </div>
                 </td>
                 <td class="text-center">
